# miralis-sosp25-artifact

./: .gitignore  Dockerfile  README.md
benchmark/: README.md  applications.py  benchmark_module.c  boot.py  common.sh  coremark.py  generate_plots.sh  generate_plots_uv.sh  install.sh  iozone.py  keystone.py  latency.py  microbenchmark_fs.sh  microbenchmark_network.sh  plot.py  (+10 more)
softcore-rs/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile  cliff.toml  doc.md  dune-project  justfile  readme.md  sail_to_rust
softcore-rs/prelude/: Cargo.toml  readme.md
softcore-rs/prelude/src/: lib.rs
softcore-rs/rv64/: Cargo.toml  readme.md
softcore-rs/rv64/src/: config.rs  lib.rs  registers.rs
softcore-rs/sail_models/: README.md  riscv.patch
softcore-rs/sail_rust_backend/: call_set.ml  context.ml  core_config.ml  dune  rust_backend.ml  rust_backend.mli  rust_gen.ml  rust_transform.ml  sail_plugin_rust.ml
softcore-rs/tests/basic/: Cargo.toml  arch.rs  arch.sail
softcore-rs/tests/basic_alt/: Cargo.toml  arch.rs  arch.sail
softcore-rs/tests/config/: Cargo.toml  arch.rs  arch.sail
softcore-rs/tests/csr/: Cargo.toml  arch.rs  arch.sail
softcore-rs/tests/decoder/: Cargo.toml  arch.rs  arch.sail
softcore-rs/tests/hoisting/: Cargo.toml  arch.rs  arch.sail
softcore-rs/tests/mret/: Cargo.toml  arch.rs  arch.sail
softcore-rs/tests/optimization/: Cargo.toml  arch.rs  arch.sail
softcore-rs/tests/trap/: Cargo.toml  arch.rs  arch.sail  lib.rs
softcore-rs/tests/types/: Cargo.toml  arch.rs  arch.sail
softcore-rs/tests/wfi/: Cargo.toml  arch.rs  arch.sail
(+346 files in other folders)
